Excepcion manejada, clase ConsoleManager para gestionar Scanner, Interficie Garantia